# Snipline

Parser/: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  expore copy.ipynb  expore.csv  expore.ipynb  main.py  pyproject.toml  urls.json
Parser/src/: config.py
Parser/src/ml/: ml.py  ml_procces.py
Parser/src/parser/: driver.py  driverv2.py  http_parser.py  load_news.py  load_newsv2.py  model.py  parse_news.py  rss.py
Parser/src/scripts/: loop.py  parse.py
Parser/src/utils/: chunkify.py  redis.py  serialise.py  urls.py  utils.py
TGBot/: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
TGBot/src/: config.py
TGBot/src/flows/: analyze.json  filter.json  info.json  loyalty.json  start.json  start_repeat.json  subscribe.json  subscription_notification.json
TGBot/src/utils/: cache.py  conditions.py  exceptions.py  file.py  i18n.json  shedule.py
VecDB/: .gitignore  docker-compose.yml  logging_production.ini  pyproject.toml
VecDB/compose/: Dockerfile.app  Dockerfile.ollama  entrypoint
VecDB/config/: gunicorn_conf.py  settings.py
VecDB/src/: main.py
VecDB/src/domain/: exceptions.py
VecDB/src/repository/: db.py  embend.py  http.py
VecDB/src/routers/: __init__.py  healthcheck.py  news.py
app/: .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
app/alembic/: env.py
app/alembic/data/: categories.json  dictionary.json
app/alembic/sql/: subscription_plan.sql
app/alembic/versions/: 2025-04-20_ai_report.py  2025-04-20_discount.py  2025-04-20_news_item.py  2025-04-20_news_report.py  2025-04-20_payment.py  2025-04-20_payment_method.py  2025-04-20_promo_offer.py  2025-04-20_promo_offer_rule.py  2025-04-20_referral.py  2025-04-20_referral_reward.py  2025-04-20_subscription_plan.py  2025-04-20_support.py  2025-04-20_user.py  2025-04-20_user_filter.py  2025-04-20_user_referral_reward.py  2025-04-20_user_subscription.py  2025-05-04_data_dictionary.py  2025-05-04_dictionary.py  2025-05-04_news_category.py  2025-05-10_news_category.py
app/compose/: start
app/config/: settings.py
app/src/: db.py  main.py  runner.py
(+75 files in other folders)
