[project]
name = "tgv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.10.16",
    "pydantic>=2.11.3",
    "redis>=5.2.1",
]
